<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (C) 2015-2017 PÂRIS Quentin
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.phoenicis</groupId>
    <artifactId>phoenicis</artifactId>
    <version>5.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>phoenicis-javafx</module>
        <module>phoenicis-win32</module>
        <module>phoenicis-dist</module>
        <module>phoenicis-repository</module>
        <module>phoenicis-configuration</module>
        <module>phoenicis-scripts</module>
        <module>phoenicis-tools</module>
        <module>phoenicis-entities</module>
        <module>phoenicis-library</module>
        <module>phoenicis-settings</module>
        <module>phoenicis-engines</module>
        <module>phoenicis-cli</module>
        <module>phoenicis-multithreading</module>
        <module>phoenicis-containers</module>
        <module>phoenicis-tests</module>
    </modules>
    <scm>
        <connection>scm:git:https://github.com/PhoenicisOrg/phoenicis.git</connection>
    </scm>
    <properties>
        <phoenicis.version>${project.version}</phoenicis.version>
        <project.root>${project.basedir}</project.root>
        <project.settings>${project.root}/settings</project.settings>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <org.bouncycastle.version>1.46</org.bouncycastle.version>
        <slf4j.version>2.0.9</slf4j.version>
        <surefire.version>3.2.1</surefire.version>
        <logback.version>1.4.11</logback.version>
        <junit.version>4.13.2</junit.version>
        <mockito.version>5.7.0</mockito.version>
        <spring.version>5.3.23</spring.version>
        <formatter-maven-plugin.version>2.23.0</formatter-maven-plugin.version>
        <graalvm.version>21.1.0</graalvm.version>
        <buildnumber.version>3.2.0</buildnumber.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.16.0</version>
            </dependency>
            <dependency>
                <groupId>com.googlecode.gettext-commons</groupId>
                <artifactId>gettext-commons</artifactId>
                <version>0.9.8</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <build>
        <pluginManagement>
            <plugins>
                <!--This plugin's configuration is used to store Eclipse m2e settings
                    only. It has no influence on the Maven build itself. -->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.jacoco</groupId>
                                        <artifactId>jacoco-maven-plugin</artifactId>
                                        <versionRange>[0.5,)</versionRange>
                                        <goals>
                                            <goal>prepare-agent</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <!-- m2e doesn't know what to do with jacoco, let's ignore it or
                                            annoying error markers appear see http://wiki.eclipse.org/M2E_plugin_execution_not_covered -->
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.codehaus.mojo</groupId>
                                        <artifactId>buildnumber-maven-plugin</artifactId>
                                        <version>${buildnumber.version}</version>
                                        <goals>
                                            <goal>create</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <execute></execute>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.github.ekryd.sortpom</groupId>
                <artifactId>sortpom-maven-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <nrOfIndentSpace>4</nrOfIndentSpace>
                    <createBackupFile>false</createBackupFile>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>sort</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.14.1</version>
                <configuration>
                    <rulesUri>file:///${project.settings}/version-rules.xml</rulesUri>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>${buildnumber.version}</version>
                <configuration>
                    <revisionOnScmFailure>unknown</revisionOnScmFailure>
                    <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>create</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>${formatter-maven-plugin.version}</version>
                <configuration>
                    <configFile>../settings/POL_Formatter_Settings.xml</configFile>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.11</version>
                <configuration>
                    <excludes>
                        <exclude>**/org/phoenicis/javafx/**</exclude>
                        <exclude>**/org/phoenicis/app/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <argLine>--add-exports javafx.graphics/com.sun.javafx.application=org.testfx</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>check-formatted</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>net.revelc.code.formatter</groupId>
                        <artifactId>formatter-maven-plugin</artifactId>
                        <version>${formatter-maven-plugin.version}</version>
                        <configuration>
                            <configFile>../settings/POL_Formatter_Settings.xml</configFile>
                        </configuration>
                        <executions>
                            <execution>
                                <id>validate</id>
                                <goals>
                                    <goal>validate</goal>
                                </goals>
                                <phase>validate</phase>
                            </execution>
                            <execution>
                                <id>format</id>
                                <goals>
                                    <goal>format</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
